# src/routes/courses.route.ts
@@ -1,0 +1,65 @@
+import { Router } from "express";
+import CourseController from "@/controllers/courses.controller";
+import validationMiddleware from "@middlewares/validation.middleware";
+import { Routes } from "@interfaces/routes.interface";
+import passport from "passport";
+import passportConfig from "@/config/passportConfig";
+import { AddCourseDTO } from "@/dtos/course.dto";
+import uploadFiles from "@/rest/fileUpload";
+
+class CourseRoute implements Routes {
+  public path = "/courses";
+  public router = Router();
+  public courseController = new CourseController();
+  public passport = passportConfig(passport);
+
+  constructor() {
+    this.initializeRoutes();
+  }
+
+  private initializeRoutes() {
+    // view all courses with pagination (without bearer)
+    this.router.get(`${this.path}`, this.courseController.viewCourses);
+
+    // add course (by trainer only)
+    this.router.post(
+      `${this.path}`,
+      [
+        passport.authenticate("jwt", { session: false }),
+        uploadFiles.single("thumbnail"),
+        (req, res, next) => {
+          req.body.price = Number(req.body.price);
+          next();
+        },
+        validationMiddleware(AddCourseDTO, "body"),
+      ],
+      this.courseController.addCourse
+    );
+
+    // view single course details
+    this.router.get(
+      `${this.path}/:courseId`,
+      this.courseController.getCourseById
+    );
+    // edit own course details
+    this.router.put(
+      `${this.path}/:courseId`,
+      [
+        passport.authenticate("jwt", { session: false }),
+        uploadFiles.single("thumbnail"),
+        (req, res, next) => {
+          req.body.price = Number(req.body.price);
+          next();
+        },
+        validationMiddleware(AddCourseDTO, "body"),
+      ],
+      this.courseController.updateCourse
+    );
+
+    // // delete own course (only when unpublished)
+    // this.router.delete("/:courseId");
+    // // view own courses
+    // this.router.get("list/:trainerId");
+  }
+}
+export default CourseRoute;
